fixed menu layout issue

--- a/src/Pages/MenuPage/MenuPage.scss
+++ b/src/Pages/MenuPage/MenuPage.scss
@@ -1,6 +1,6 @@
 #menuButtonsContainer {
     display: flex;
-    width: 60vw;
+    // width: 60vw;
     justify-content: space-between;
     .button {
         width: 80px;
@@ -13,6 +13,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    width: 25vw;
 }
 
 .buttonIcon {
